--- a/views/index.html
+++ b/views/index.html
@@ -26,8 +26,8 @@
       </div>
       <div class="footer">
         <p>
-          by 
-          <a href="http://www.freecodecamp.com">freeCodeCamp</a>
+          by
+          <a href="https://www.nightlightsoftware.com"> Nightlight Software LLC</a>
         </p>
       </div>
    </body>
